--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ serde_json = "1.0.108"
 sha3 = { version = "0.10.8", features = ["asm", "oid", "reset"] }
 sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
 tokio = { version = "1.34.0", features = ["full"] }
+tokio-util = "0.7.10"
 uuid = { version = "1.6.1", features = ["v5", "v4", "serde"] }
