--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,14 @@ actix-rt = "2.9.0"
 actix-web = "4.4.0"
 bitflags = "2.4.1"
 chrono = { version = "0.4.31", features = ["serde"] }
+colored = "2.1.0"
 derive_more = "0.99.17"
 dotenv = "0.15.0"
+env_logger = "0.10.1"
 futures = "0.3.29"
 futures-util = "0.3.29"
 jsonwebtoken = "9.2.0"
+log = "0.4.20"
 serde = "1.0.193"
 serde_json = "1.0.108"
 sha3 = { version = "0.10.8", features = ["asm", "oid", "reset"] }
